syntax = "proto3";

import "google.protobuf.tools/3.21.10/tools/google/protobuf/timestamp.proto";

option csharp_namespace = "AsunaShared.Message";

message OuterPing
{
  google.protobuf.Timestamp SendTime = 1;
}

message OuterPong
{
  google.protobuf.Timestamp SendTime = 1;
  google.protobuf.Timestamp ReceiveTime = 2;
}

message AuthReq
{
  string Username = 1;
  string Password = 2;
}

enum AuthRetCode
{
  OK = 0;
  NotExit = 1;
}

message AccountData
{
  bytes Guid = 1;
  string Username = 2;
  repeated bytes AvatarList = 3;
}

message AuthRsp
{
  AuthRetCode ret = 1;
  AccountData data = 2;
}

message AccountRpc
{
  bytes Guid = 1;
  uint32 Method = 2;
  int32 ArgsCount = 3;
  repeated uint32 ArgsTypeIndex = 4;
  repeated bytes Args = 5;
}